deployment/components/infra/monitoring/ingress/controller.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: <<infra-namespace>>
  name: monitoring-ingress
  labels:
    app.kubernetes.io/name: monitoring-ingress
    app.kubernetes.io/part-of: monitoring-ingress
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: monitoring-ingress
    app.kubernetes.io/part-of: monitoring-ingress
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
    - name: prometheus
      port: 9090
      targetPort: 9090
    - name: alertmanager
      port: 9093
      targetPort: 9093

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: <<infra-namespace>>
  name: monitoring-ingress-controller
  labels:
    app.kubernetes.io/name: monitoring-ingress
    app.kubernetes.io/part-of: monitoring-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: monitoring-ingress
      app.kubernetes.io/part-of: monitoring-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monitoring-ingress
        app.kubernetes.io/part-of: monitoring-ingress
      annotations:
        prometheus.io/port: "10254"
    spec:
      containers:
        - name: monitoring-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.20.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/monitoring-ingress-configuration
            - --tcp-services-configmap=$(POD_NAMESPACE)/monitoring-ingress-tcp-services
            - --udp-services-configmap=$(POD_NAMESPACE)/monitoring-ingress-udp-services
            - --publish-service=$(POD_NAMESPACE)/monitoring-ingress
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --ingress-class=nginx-monitoring-ingress
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 33
          ports:
            - name: metrics
              containerPort: 10254
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
