deployment/components/infra/monitoring/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: false
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/app-root: /
    kubernetes.io/ingress.class: nginx-monitoring-ingress
spec:
  tls:
  - secretName: das-ssl
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
      - path: /alertmanager
        backend:
          serviceName: alertmanager
          servicePort: 9093
